delay differential equations

--- a/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3-AnalyticBaselines.md
+++ b/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3-AnalyticBaselines.md
@@ -1,22 +1,18 @@
-# 00.2.2 — Analytic Baselines (central 1/r² reference)
+# 00.2.3 — Delay-Only Formulations (Exact Statements)
 
 Purpose:
-- Establish closed-form “Kepler-like” baselines by removing delay, yielding central inverse-square problems with exact solutions.
-- Use these as reference solutions for perturbation about the canonical delayed law.
+- State the delay differential equations (DDEs) that govern canonical interactions under the delayed, purely radial law.
+- Record exact analytical solutions only where they exist; otherwise, state solvability status without approximations.
 
 Models:
-- Fixed-center inverse-square (test particle):
-  - Equation: a(r) = −K/r² r̂ with constant K>0 (attraction).
-  - Closed forms: radial fall, escape, and bound orbits; energy and angular momentum invariants.
-- Equal-mass two-body reduction (instantaneous central model):
-  - Relative-coordinate reduction; central force on the separation vector; Kepler conics.
-
-Comparisons to canonical law:
-- Delay breaks centrality and exact conservation of the Kepler invariants.
-- Small-β expansion (|v| ≪ 1): leading-order dynamics match the central baseline; corrections scale with β and curvature.
+- Fixed center (test particle, source stationary):
+  - DDE reduces exactly to the ODE $\ddot{r}=-K/r^2$ with $K=\kappa |q q'|>0$; exact closed forms exist.
+- Two-body mutual interaction (opposite or equal charges):
+  - Coupled DDEs with causal roots $t_0$ defined by $|x_i(t)-x_j(t_0)|=t-t_0$ (v=1); accelerations superpose as $\pm \kappa \epsilon^2/r^2$ along the line of action.
+  - No exact closed-form solutions are presently known for the coupled DDEs in general; see 00.2.3.0 and 00.2.3.2 for explicit statements.
 
 Deliverables:
-- Baseline formulas (energies, periods, conics) for reference.
-- Mapping notes: how to translate baseline parameters to canonical notation (κ, ε, charges).
+- Precise DDE forms and causal-root conditions for use in analysis and computation.
+- Cross-references to sections with exact solutions (fixed source) and status notes (mutual interaction).
 
-Plain language: First solve the easy, central 1/r² problems exactly; then treat the real, delayed law as a small correction where appropriate.
+Plain language: We give only the exact delayed equations; where an exact solution exists (fixed source), we present it, and where it does not (mutual interaction), we say so without approximations.
