--- a/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3.0-OppositeChargesFromRestatLargeSeparation.md
+++ b/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3.0-OppositeChargesFromRestatLargeSeparation.md
@@ -3,121 +3,89 @@
 Setup:
 - Two Architrinos with charges q1=−ε and q2=+ε.
 - Initial velocities v1≈0, v2≈0; initial separation r0 ≫ 1 (in v=1 units).
+- For all examples, we restrict motion to a single geometrical line.
 
 Objectives:
-- Early-time inward acceleration profile.
-- Time-to-reach given separation r(t) in the slow-motion regime.
-- Deviation from central baseline due to delay.
-
-Baseline (central 1/r² reference):
-- Instantaneous central model yields radial fall with closed-form energy relation and time-of-fall integrals.
-- Symmetric two-body reduction to relative coordinate with central attraction.
+- Delay-only formulation of the equations of motion (DDEs).
+- Exact analytic solutions if available; otherwise, status of solvability.
 
 Canonical delayed-law considerations:
-- Delay breaks centrality; line of action points to past partner position, introducing a small tangential component that sustains angular momentum growth from asymmetries.
-- Leading-order small-β (|v| ≪ 1) expansion:
-  - Per-hit amplitude ≈ κ ε² / r² (up to sign).
-  - Corrections scale with β and curvature of worldlines; estimate accumulated phase lag over Δt.
+- Delay enters through the implicit emission times $t_0$ satisfying $\lvert x_1(t) - x_2(t_0)\rvert = t - t_0$ (and its counterpart).
+- All per-hit actions are radial along the line of action; $H(0)=0$ excludes $t_0=t$.
 
 Equations of motion (canonical delayed law; two-body, v=1):
-- Notation (opposite charges): q₁=−ε (particle 1), q₂=+ε (particle 2), positions $\mathbf{s}_1(t)$, $\mathbf{s}_2(t)$.
+- Definitions:
+  - Charges: $q_1=-\epsilon$ (particle 1), $q_2=+\epsilon$ (particle 2); $\epsilon>0$ is the unit charge magnitude.
+  - Coupling: $\kappa>0$ is the universal coupling constant; we work in units with field speed $v=1$.
+  - Separation: $r(t)=|x_1(t)-x_2(t)|>0$.
 - Causal (path-history) times:
-  - $t_0^{(2\to 1)}\in\mathcal{C}_2(t)$ solves $\|\mathbf{s}_1(t)-\mathbf{s}_2(t_0)\|=t-t_0$.
-  - $t_0^{(1\to 2)}\in\mathcal{C}_1(t)$ solves $\|\mathbf{s}_2(t)-\mathbf{s}_1(t_0)\|=t-t_0$.
+  - $t_0^{(2\to 1)}\in\mathcal{C}_2(t)$ solves $\lvert x_1(t)-x_2(t_0)\rvert = t-t_0$.
+  - $t_0^{(1\to 2)}\in\mathcal{C}_1(t)$ solves $\lvert x_2(t)-x_1(t_0)\rvert = t-t_0$.
 - Per-particle accelerations (sum over all causal roots if multiple exist):
   $$
-  \mathbf{a}_1(t)
+  a_1(t)
   \;=\;
   \sum_{t_0\in\mathcal{C}_2(t)}
-  \kappa\,\sigma_{q_2 q_1}\,\frac{|q_2 q_1|}{r_{12}^2}\,\hat{\mathbf{r}}_{12}
-  \;=\;
-  -\,\kappa\,\epsilon^2\,\frac{\hat{\mathbf{r}}_{12}}{r_{12}^2},
+  -\,\kappa\,\epsilon^2\,\frac{\mathrm{sgn}\!\big(x_1(t)-x_2(t_0)\big)}{r_{12}^2},
   \quad
-  \hat{\mathbf{r}}_{12}=\frac{\mathbf{s}_1(t)-\mathbf{s}_2(t_0)}{r_{12}},
-  \ r_{12}=\|\mathbf{s}_1(t)-\mathbf{s}_2(t_0)\|.
+  r_{12}=\big|x_1(t)-x_2(t_0)\big|,
   $$
   $$
-  \mathbf{a}_2(t)
+  a_2(t)
   \;=\;
   \sum_{t_0\in\mathcal{C}_1(t)}
-  \kappa\,\sigma_{q_1 q_2}\,\frac{|q_1 q_2|}{r_{21}^2}\,\hat{\mathbf{r}}_{21}
+  +\,\kappa\,\epsilon^2\,\frac{\mathrm{sgn}\!\big(x_2(t)-x_1(t_0)\big)}{r_{21}^2},
+  \quad
+  r_{21}=\big|x_2(t)-x_1(t_0)\big|.
+  $$
+  Here $\sigma_{q_2 q_1}=\sigma_{q_1 q_2}=-1$ (unlike charges attract), $H(0)=0$ excludes $t_0=t$, and $\mathrm{sgn}(\cdot)$ denotes the sign function.
+
+Relative-coordinate DDE:
+- Define $r(t)=x_1(t)-x_2(t)>0$. Then
+  $$
+  \ddot{r}(t)\;=\;a_1(t)-a_2(t)
   \;=\;
-  -\,\kappa\,\epsilon^2\,\frac{\hat{\mathbf{r}}_{21}}{r_{21}^2},
-  \quad
-  \hat{\mathbf{r}}_{21}=\frac{\mathbf{s}_2(t)-\mathbf{s}_1(t_0)}{r_{21}},
-  \ r_{21}=\|\mathbf{s}_2(t)-\mathbf{s}_1(t_0)\|.
+  -\,\kappa\,\epsilon^2\sum_{t_0\in\mathcal{C}_2(t)}\frac{\mathrm{sgn}\!\big(r_{12}\big)}{r_{12}^2}
+  -\,\kappa\,\epsilon^2\sum_{t_0\in\mathcal{C}_1(t)}\frac{\mathrm{sgn}\!\big(r_{21}\big)}{r_{21}^2},
   $$
-  Here $\sigma_{q_2 q_1}=\sigma_{q_1 q_2}=-1$ (unlike charges attract), and $H(0)=0$ excludes $t_0=t$.
+  with $r_{12}=|x_1(t)-x_2(t_0)|$ and $r_{21}=|x_2(t)-x_1(t_0)|$ defined by their respective causal-root conditions. No exact closed-form solution is presently known for the coupled DDE system.
 
-Relative-coordinate form (quasi-instantaneous, small-β limit):
-- With unique roots and $|\mathbf{v}|\ll 1$, approximate $\mathbf{s}_j(t_0)\approx \mathbf{s}_j(t)$:
+Nonlinear history-anchored form (vector notation for clarity):
   $$
-  \mathbf{a}_1(t)\approx -\,\kappa\,\epsilon^2\,\frac{\mathbf{r}}{\|\mathbf{r}\|^3},
+  \mathbf{a}_1(t)\;=\;-\,\kappa\,\epsilon^2\,\frac{\mathbf{s}_1(t)-\mathbf{s}_2\!\big(t_0^{(2\to 1)}\big)}{\big\|\mathbf{s}_1(t)-\mathbf{s}_2\!\big(t_0^{(2\to 1)}\big)\big\|^3},
   \qquad
-  \mathbf{a}_2(t)\approx +\,\kappa\,\epsilon^2\,\frac{\mathbf{r}}{\|\mathbf{r}\|^3},
-  \quad
-  \mathbf{r}(t)=\mathbf{s}_1(t)-\mathbf{s}_2(t).
+  \mathbf{a}_2(t)\;=\;+\,\kappa\,\epsilon^2\,\frac{\mathbf{s}_2(t)-\mathbf{s}_1\!\big(t_0^{(1\to 2)}\big)}{\big\|\mathbf{s}_2(t)-\mathbf{s}_1\!\big(t_0^{(1\to 2)}\big)\big\|^3}.
   $$
-  Hence the relative motion satisfies
-  $$
-  \ddot{\mathbf{r}}(t)\;=\;\mathbf{a}_1(t)-\mathbf{a}_2(t)\;\approx\;-\,2\,\kappa\,\epsilon^2\,\frac{\mathbf{r}}{\|\mathbf{r}\|^3},
-  $$
-  i.e., a central, attractive, inverse-square “two-body spring” in the instantaneous baseline.
+  The attachment points are the partners’ path-history locations at their respective causal emission times; linearizations and small-parameter expansions are intentionally omitted.
 
-Spring analogy (nonlinear and linearized):
-- Nonlinear, path-history–anchored spring:
-  $$
-  \mathbf{a}_1(t)\;=\;-\,\kappa\,\epsilon^2\,\frac{\mathbf{s}_1(t)-\mathbf{s}_2(t_0^{(2\to 1)})}{\|\mathbf{s}_1(t)-\mathbf{s}_2(t_0^{(2\to 1)})\|^3},
-  \qquad
-  \mathbf{a}_2(t)\;=\;-\,\kappa\,\epsilon^2\,\frac{\mathbf{s}_2(t)-\mathbf{s}_1(t_0^{(1\to 2)})}{\|\mathbf{s}_2(t)-\mathbf{s}_1(t_0^{(1\to 2)})\|^3}.
-  $$
-  This is a spring-like law with a history-anchored “attachment point” and a stiffness that varies with separation ($\propto 1/r^2$).
-- Linearization about a working separation $r_\star$ (small radial perturbation $\delta r$ in the instantaneous baseline):
-  $$
-  \delta \ddot r\;\approx\;-\,\frac{2\,\kappa\,\epsilon^2}{r_\star^3}\,\delta r
-  \quad\Longleftrightarrow\quad
-  \delta \ddot r + \omega_r^2\,\delta r = 0,\;\;
-  \omega_r^2=\frac{2\,\kappa\,\epsilon^2}{r_\star^3}.
-  $$
-  Thus, near $r_\star$ the radial motion behaves like a harmonic oscillator with an effective (geometry-dependent) spring constant $k_{\mathrm{eff}}\propto r_\star^{-3}$; delay modifies this locally harmonic picture as speeds grow and tangential components appear.
-
-Central-origin kinematics (positions and velocities; symmetric two-body frame)
+Central-origin kinematics (1D positions and velocities; symmetric two-body frame)
 - Choose a fixed origin at the geometric midpoint. With equal-magnitude charges and symmetric initial data, this midpoint remains at rest by symmetry.
-- Define the instantaneous separation vector
+- Define the separation
   $$
-  \mathbf{r}(t) \equiv \mathbf{s}_1(t) - \mathbf{s}_2(t) = r(t)\,\hat{\mathbf{n}}(t),\qquad r(t)=\|\mathbf{r}(t)\|,\ \ \hat{\mathbf{n}}=\frac{\mathbf{r}}{r}.
+  r(t) \equiv x_1(t) - x_2(t) > 0.
   $$
   Positions relative to the central origin are then
   $$
-  \mathbf{s}_1(t) = \tfrac{1}{2}\,r(t)\,\hat{\mathbf{n}}(t),\qquad
-  \mathbf{s}_2(t) = -\,\tfrac{1}{2}\,r(t)\,\hat{\mathbf{n}}(t).
+  x_1(t) = \tfrac{1}{2}\,r(t),\qquad
+  x_2(t) = -\,\tfrac{1}{2}\,r(t).
   $$
-- Let the motion lie in a plane with polar angle $\theta(t)$ for $\hat{\mathbf{n}}(t)$. Define the unit tangent $\hat{\mathbf{t}}(t)$ by
-  $$
-  \dot{\hat{\mathbf{n}}}(t) = \dot{\theta}(t)\,\hat{\mathbf{t}}(t),\qquad
-  \dot{\hat{\mathbf{t}}}(t) = -\,\dot{\theta}(t)\,\hat{\mathbf{n}}(t),
-  $$
-  so that $\{\hat{\mathbf{n}},\hat{\mathbf{t}}\}$ is an orthonormal moving frame in the orbital plane.
 - Velocities follow by differentiation:
   $$
-  \mathbf{v}_1(t) = \dot{\mathbf{s}}_1(t)
-  = \tfrac{1}{2}\,\dot{r}(t)\,\hat{\mathbf{n}}(t) + \tfrac{1}{2}\,r(t)\,\dot{\theta}(t)\,\hat{\mathbf{t}}(t),
+  v_1(t) = \dot{x}_1(t)
+  = \tfrac{1}{2}\,\dot{r}(t),
+  \qquad
+  v_2(t) = \dot{x}_2(t)
+  = -\,\tfrac{1}{2}\,\dot{r}(t).
   $$
-  $$
-  \mathbf{v}_2(t) = \dot{\mathbf{s}}_2(t)
-  = -\,\tfrac{1}{2}\,\dot{r}(t)\,\hat{\mathbf{n}}(t) - \tfrac{1}{2}\,r(t)\,\dot{\theta}(t)\,\hat{\mathbf{t}}(t).
-  $$
-  These are kinematic identities independent of the specific force law. In the canonical delayed law, $\theta(t)$ evolves because each acceleration aims toward the partner’s past position, generating a tangential component that sustains angular motion while $r(t)$ changes under the radial component.
 - Symmetric initial conditions (example):
   $$
-  \mathbf{s}_1(0)=\tfrac{r_0}{2}\,\hat{\mathbf{e}}_x,\quad
-  \mathbf{s}_2(0)=-\tfrac{r_0}{2}\,\hat{\mathbf{e}}_x,\quad
-  \mathbf{v}_1(0)=\mathbf{v}_2(0)=\mathbf{0}.
+  x_1(0)=\tfrac{r_0}{2},\quad
+  x_2(0)=-\tfrac{r_0}{2},\quad
+  v_1(0)=v_2(0)=0.
   $$
 
 Deliverables:
-- Formula list from the baseline radial fall for quick comparison.
-- Asymptotic estimates: earliest-time r(t) ≈ r0 − (1/2) a0 t² with a0 = κ ε² / r0², plus first corrections from delay.
-- Numerical test sketch to validate asymptotics against the event-driven model.
+- Exact DDE statements and causal-root definitions suitable for analysis and computation.
+- Solvability status: no known closed-form solution; numerical integration requires robust root-finding and event-aware stepping.
 
-Plain language: Start very far apart and nearly at rest—at first it looks like simple 1/r² attraction; as speeds pick up, delay adds a small sideways effect that the central model doesn’t have.
+Plain language: Start very far apart and nearly at rest—motion remains on the initial line. Delay enters through the partner’s past position via the causal-time condition; there is no sideways component in this example.
