--- a/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3.2-Equal-ChargeSymmetricRepulsion.md
+++ b/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3.2-Equal-ChargeSymmetricRepulsion.md
@@ -2,22 +2,39 @@
 
 Setup:
 - Two identical charges (e.g., q1=q2=+ε) placed at separation r0 with v1=v2=0 and symmetry about the midpoint.
-- Motion is radially outward by symmetry in the central baseline.
 
 Objectives:
-- Outward acceleration profile and asymptotic behavior v(r) as r→∞.
-- Time-to-double separation.
+- Delay-only formulation of the equations of motion (DDEs).
+- Exact analytic solutions if available; otherwise, status of solvability.
 
-Baseline (central 1/r² reference):
-- Relative-coordinate reduction with repulsive central force K/r².
-- Energy integral yields v(r) and t(r) in closed form; asymptotics v→√(2E) as r→∞ if E>0.
+Delay differential equations (two-body, v=1):
+- Causal times:
+  - $t_0^{(2\to 1)}\in\mathcal{C}_2(t)$ solves $\lvert x_1(t)-x_2(t_0)\rvert = t-t_0$.
+  - $t_0^{(1\to 2)}\in\mathcal{C}_1(t)$ solves $\lvert x_2(t)-x_1(t_0)\rvert = t-t_0$.
+- Accelerations (sum over all causal roots if multiple exist):
+  $$
+  a_1(t)
+  \;=\;
+  \sum_{t_0\in\mathcal{C}_2(t)}
+  +\,\kappa\,\epsilon^2\,\frac{\mathrm{sgn}\!\big(x_1(t)-x_2(t_0)\big)}{r_{12}^2},
+  \quad
+  r_{12}=\big|x_1(t)-x_2(t_0)\big|,
+  $$
+  $$
+  a_2(t)
+  \;=\;
+  \sum_{t_0\in\mathcal{C}_1(t)}
+  -\,\kappa\,\epsilon^2\,\frac{\mathrm{sgn}\!\big(x_2(t)-x_1(t_0)\big)}{r_{21}^2},
+  \quad
+  r_{21}=\big|x_2(t)-x_1(t_0)\big|.
+  $$
+- Symmetry implies $x_1(t)=-x_2(t)$ and $a_1(t)=-a_2(t)$ for all $t$ given symmetric initial data.
 
-Canonical delayed-law notes:
-- Delay introduces mild non-centrality if symmetry is perturbed.
+Solvability status:
+- No exact closed-form solution is presently known for the coupled DDE system under mutual repulsion with delay.
 
 Deliverables:
-- Closed-form central-model expressions for quick comparison.
-- Asymptotic series for large r.
-- Guidance for numerical verification under small symmetry-breaking perturbations.
+- Exact DDE statements and causal-root definitions suitable for analysis and computation.
+- Notes on symmetry and qualitative properties without invoking approximations.
 
-Plain language: Same-charge push-apart is the time-reverse of a fall—central theory is exact and gives clean timing to compare with delay-modified runs.
+Plain language: Two like charges at rest push apart along the line under the delayed law; the governing equations are implicit in the causal times, and no closed-form solution is currently known.
