--- a/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3-AnalyticBaselines.md
+++ b/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3-AnalyticBaselines.md
@@ -9,7 +9,7 @@ Models:
   - DDE reduces exactly to the ODE $\ddot{r}=-K/r^2$ with $K=\kappa |q q'|>0$; exact closed forms exist.
 - Two-body mutual interaction (opposite or equal charges):
   - Coupled DDEs with causal roots $t_0$ defined by $|x_i(t)-x_j(t_0)|=t-t_0$ (v=1); accelerations superpose as $\pm \kappa \epsilon^2/r^2$ along the line of action.
-  - No exact closed-form solutions are presently known for the coupled DDEs in general; see 00.2.3.0 and 00.2.3.2 for explicit statements.
+  - No exact closed-form solutions are presently known for the coupled DDEs in general.
 
 Deliverables:
 - Precise DDE forms and causal-root conditions for use in analysis and computation.
