--- a/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3-AnalyticBaselines.md
+++ b/Geometrical-Model-of-Nature/00-FoundationElements/00.2-ActionExpositionandIdealizedExamples/00.2.3-AnalyticBaselines.md
@@ -11,6 +11,35 @@ Models:
   - Coupled DDEs with causal roots $t_0$ defined by $|x_i(t)-x_j(t_0)|=t-t_0$ (v=1); accelerations superpose as $\pm \kappa \epsilon^2/r^2$ along the line of action.
   - No exact closed-form solutions are presently known for the coupled DDEs in general.
 
+Symmetric two-body on a line (exact DDE; challenges):
+- Let $x_1(t)=+\tfrac{1}{2}r(t)$ and $x_2(t)=-\tfrac{1}{2}r(t)$ with $r(t)>0$ and $v=1$. The causal-time condition implies
+  $$
+  \frac{r(t)+r(t_0)}{2} \;=\; t - t_0,\qquad t_0<t,
+  $$
+  or, writing $\tau(t)=t-t_0>0$ implicitly,
+  $$
+  r(t) + r\!\big(t-\tau(t)\big) \;=\; 2\,\tau(t).
+  $$
+- For opposite charges, the exact relative-coordinate equation is the state-dependent DDE
+  $$
+  \ddot r(t) \;=\; -\,\frac{8\,\kappa\,\epsilon^2}{\big(r(t) + r(t-\tau(t))\big)^2},
+  $$
+  with $\tau(t)$ determined by the implicit constraint above. For equal charges, the sign is reversed.
+
+Integral (delta) form selecting the causal root:
+- For particle 1 one may write
+  $$
+  a_1(t) \;=\; -\,\kappa\,\epsilon^2 \int_{0}^{\infty}
+  \frac{\delta\!\big(\lvert x_1(t)-x_2(t-\tau)\rvert - \tau\big)\,
+  \mathrm{sgn}\!\big(x_1(t)-x_2(t-\tau)\big)}
+  {\lvert x_1(t)-x_2(t-\tau)\rvert^{2}}\; d\tau,
+  $$
+  whose evaluation reduces exactly to finding the causal delay $\tau(t)$; in the symmetric 1D case this yields the DDE above.
+
+Why closed-form solutions are unlikely (even with symmetry):
+- The delay is state-dependent: the unknown $r(t)$ appears both in the right-hand side and in the implicit constraint defining $\tau(t)$, making the problem a nonlinear functional equation rather than an ODE.
+- Even linear constant-delay DDEs rarely admit elementary closed forms; state-dependent delays are generically non-integrable. The fixed-center problem is a special case that collapses to an ODE (see 00.2.3.1).
+
 Deliverables:
 - Precise DDE forms and causal-root conditions for use in analysis and computation.
 - Cross-references to sections with exact solutions (fixed source) and status notes (mutual interaction).
